@@ -10,7 +10,9 @@ version 0.97
   gnome)
 - convert manual to SGML (DocBook) and update
 - attempt to support directory names with spaces (yuck!) under
-  win32
+  win32 (?)
+- under win32, use registry instead of system-wide config file
+  libgretl.cfg
 
 07/26/2001 version 0.96
 - update to gtkextra version 0.99.16
